--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_rachunek_zlecenia.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_rachunek_zlecenia.xhtml
@@ -95,6 +95,7 @@
                     <p:ajax event="change" partialSubmit="true" global="false" />
                 </p:inputNumber >
                 </p:panelGrid>
+                <h:outputText value="Poniższe opcje można edytować w każdym momencie. Zmiany zapisza sie po kliknięciu w kwadrat"/>
                 <p:panelGrid columns="2" style="margin-top: 10px;">
                     <p:outputLabel value="osoba do 26 roku życia:"/>
                     <p:selectBooleanCheckbox value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.do26lat}" styleClass="czekpole">
