wstepnie zrobione zlecenia po nowemu

--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
@@ -116,7 +116,7 @@
                             <bcf:outputpl value="#{itempasek.brutto}"/>
                         </p:column>
                          <p:column>
-                             <bcf:outputpl value="#{itempasek.bruttozus}" rendered="#{itempasek.do26lat eq true}"/>
+                             <bcf:outputpl value="#{itempasek.przekroczenie26lat}" rendered="#{itempasek.do26lat eq true}"/>
                         </p:column>
                         <p:column>
                             <bcf:outputpl value="#{itempasek.dieta}"/>
