NAPRAWY DOMOWE W TYM ROZRACHUNKI FK ROZNE WALUTY

--- a/npkpir_23/web/ksiegowa/sub/vatzest.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/vatzest.xhtml
@@ -16,6 +16,7 @@
     </script>
     <p:growl ><p:autoUpdate/></p:growl>
     <f:event type="preRenderView" listener="#{ewidencjaVatView.stworzenieEwidencjiZDokumentow(WpisView.podatnikObiekt)}" rendered="#{!WpisView.ksiegirachunkowe}"/>
+    <f:event type="preRenderView" listener="#{deklaracjevatView.init()}" rendered="#{!WpisView.ksiegirachunkowe}"/>
 <!--    <p:commandButton value="sporządź" actionListener="#{ewidencjaVatView.stworzenieEwidencjiZDokumentow(WpisView.podatnikObiekt)}" update="formVatZestKsiegowa" style="width: 120px; padding: 5px;"/>-->
     <h:outputText value="Rozliczenia vat są miesięczne. Zebrano dane z miesiąca." rendered="#{WpisView.vatokres eq 1}"/>
     <h:outputText value="Rozliczenia vat są kwartalne. Zebrano dane z całego kwartału." rendered="#{WpisView.vatokres eq 2}"/>
