--- a/npkpir_23/web/wspolny/sub/importxls.xhtml
+++ b/npkpir_23/web/wspolny/sub/importxls.xhtml
@@ -20,11 +20,11 @@
             </p:panelGrid>
        <p:panelGrid columns="2" columnClasses="sixty-percent forty-percent"  binding="#{importDokumentowGlownyView.grid0}" >
                     <p:panelGrid columns="1" style="margin-top: 20px;">
-                        <h:outputText value="Akceptowana wersja pliku xls,xlsx,xml,epp, csv" style="font-weight: bold;"/>
+                        <h:outputText value="Akceptowana wersja pliku xls,xlsx,xml,epp,csv,json" style="font-weight: bold;"/>
                         <p:fileUpload fileUploadListener="#{importDokumentowGlownyView.zachowajplik}" 
                                       mode="advanced" dragDropSupport="true" multiple="true" sequential="true" auto="true"
                                       update="messages2 panelprzyciskow akordeon5:form_importinterpaper panelplik:rodzajrach" 
-                                      invalidSizeMessage="Plik za duży" allowTypes="/(\.|\/)(csv|xls|xml|xlsx|epp)$/" invalidFileMessage="Niewłaściwy format pliku: "
+                                      invalidSizeMessage="Plik za duży" allowTypes="/(\.|\/)(csv|xls|xml|xlsx|epp|json)$/" invalidFileMessage="Niewłaściwy format pliku: "
                                       uploadLabel="Wczytaj" label="Wybierz" cancelLabel="Rezygnuj" 
                                       style="height: 90px;"> 
                         </p:fileUpload>
@@ -55,8 +55,7 @@
         <h:form id="panelprzyciskow">
         <h:outputText value="#{importDokumentowGlownyView.wiadomoscnieprzypkonta}" style="color: red;"/>
         <p:panelGrid columns="6" rendered="false" binding="#{importDokumentowGlownyView.grid2}">
-        <h:outputText value=" "/><h:outputText value=" "/><h:outputText value=" "/><h:outputText value=" "/><h:outputText value=" "/>
-                <p:commandButton value="pobierz dane" actionListener="#{importDokumentowGlownyView.importujdok()}" update="panelprzyciskow akordeon5 panelzsumami" style="width: 120px;" />
+            <p:commandButton value="pobierz dane" actionListener="#{importDokumentowGlownyView.importujdok()}" update="panelprzyciskow akordeon5 panelzsumami" style="width: 120px;" />
                 <p:commandButton value="generuj dok" actionListener="#{importDokumentowGlownyView.generuj()}" update="akordeon5" style="width: 120px;margin-left: 20px;" rendered="false" binding="#{importDokumentowGlownyView.generujbutton}"/>
                 <p:commandButton value="drukuj " actionListener="#{importDokumentowGlownyView.drukuj()}" update="akordeon5" style="width: 120px;margin-left: 20px;" rendered="false" binding="#{importDokumentowGlownyView.drkujfizbutton}"/>
                 <p:commandButton value="usuń duplikaty " actionListener="#{importDokumentowGlownyView.usunduplikatyInter()}" update="akordeon5:form_importinterpaper:dataListImport" style="width: 120px;margin-left: 20px;"/>
@@ -98,7 +97,7 @@
                 <p:panelGrid columns="1">
             <p:dataTable id="dataListImport" value="#{importDokumentowGlownyView.pobranefaktury}" var="itemimp" rowIndexVar="row" widgetVar="tablicadokumentyimport" 
                          selection="#{importDokumentowGlownyView.selected}" rowKey="#{itemimp.nr}"  
-                         style="width: 1500px; height: 480px; overflow-y: scroll; margin-top: 15px;margin-bottom: 15px;" filteredValue="#{importDokumentowGlownyView.pobranefakturyfilter}"
+                         style="width: 1480px; height: 480px; overflow-y: scroll; margin-top: 15px;margin-bottom: 15px;" filteredValue="#{importDokumentowGlownyView.pobranefakturyfilter}"
                          emptyMessage="Brak importowanych dokumentów/Sprawdź kolumny w dokumencie xls" styleClass="gridZaksiegowane"
                          sortBy="#{itemimp.nr}"  rows="150"
                          rowsPerPageTemplate="150,300,600,900,1200" paginatorPosition="top" paginator="#{importDokumentowGlownyView.pobranefaktury.size() gt 150 ? 'true':'false'}" 
