--- a/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_analiza.xhtml
+++ b/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_analiza.xhtml
@@ -131,6 +131,7 @@
                     </p:selectBooleanCheckbox>
                     </p:panelGrid>
             </p:panelGrid>
+            <h:outputText value="Aby zarchiwizować wszystkie należy wybrać po lewej i wcisnąć przycisk 'archiwizuj'. Archiwizowanie pojedyncze i odarchiwizowanie - wciskamy czekboksy po prawej" style="color: green;"/>
             <p:dataTable id="tablicaanaliza" value="#{fakturaRozrachunkiAnalizaView.nowepozycje}" var="item" style="width: 1250px; margin-top: 20px;"
                          emptyMessage="niczego nie zaksięgowano dla firmy #{fakturaRozrachunkiAnalizaView.szukanyklient}" selection="#{fakturaRozrachunkiAnalizaView.selectedrozliczenia}" rowKey="#{item.lp}"
                          rowIndexVar="row" editable="true" styleClass="compact" rowSelectMode="add"
@@ -143,7 +144,8 @@
                 <f:facet name="header">
                     <h:outputText value="nowe dokumenty"/>
                 </f:facet>
-                <p:column selectionMode="multiple" width="20"  style="text-align: center;"/>
+                <p:column selectionMode="multiple" width="20"  style="text-align: center;">
+                </p:column>
                 <p:column width="20" style="text-align: center;">
                     <f:facet name="header">
                         <h:outputText value="lp"/>
@@ -235,7 +237,7 @@
                     </h:outputText>
                 </p:column>
                 <p:column width="40" headerText="arch" style="text-align: center;">
-                    <p:selectBooleanCheckbox value="#{item.archiwalny}" >
+                    <p:selectBooleanCheckbox value="#{item.archiwalny}" id="archiwalny">
                         <p:ajax event="change" listener="#{fakturaRozrachunkiAnalizaView.nanieszmianaarchiwalny(item)}" partialSubmit="true" global="false"/>
                     </p:selectBooleanCheckbox>
                 </p:column>
