--- a/npkpir_23/web/dedra/dedraVATwysylka.xhtml
+++ b/npkpir_23/web/dedra/dedraVATwysylka.xhtml
@@ -17,7 +17,9 @@
                         <h:form id="form">
                             <ui:include src="sub/menu_wiad.xhtml"/>   <!-- menu contextowe i pole wiadomosci growl-->
                         </h:form>
+                        <h:form id="formdekl">
                                 <ui:include src="../wspolny/sub/vatPrzygotowanieDeklaracjiN.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
+                            </h:form>
                     </p:layoutUnit>
                 </p:layout>
             </f:view>
