--- a/npkpir_23/web/dedra/dedraWysylka.xhtml
+++ b/npkpir_23/web/dedra/dedraWysylka.xhtml
@@ -17,9 +17,11 @@
                         <h:form id="form">
                             <ui:include src="sub/menu_wiad.xhtml"/>   <!-- menu contextowe i pole wiadomosci growl-->
                         </h:form>
+                        <h:form>
                             <f:event type="preRenderView" listener="#{deklaracjevatView.init()}"/>
                              <f:event type="preRenderView" listener="#{podpisView.sprawdzczymozna(WpisView)}"/>
                             <ui:include src="../wspolny/sub/vatdowyslania.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
+                        </h:form>
                     </p:layoutUnit>
                 </p:layout>
             </f:view>
