--- a/npkpir_23/web/wspolny/sub/vatPrzygotowanieDeklaracjiN.xhtml
+++ b/npkpir_23/web/wspolny/sub/vatPrzygotowanieDeklaracjiN.xhtml
@@ -37,7 +37,7 @@
                                  rendered="#{vat7DKView.pokazuproszczona and vat7DKView.pozwolnazapis}"
                                  style="width: 150px; margin-left: 10px;" title="Najpierw wciśnij 'oblicz'. Potem dopisz ewentualne kwoty z ręki."/>
                 <p:commandButton  value="zapisz"  actionListener="#{vat7DKView.zapiszdeklaracje}"
-                                 update=":formdekl    dialog_deklaracje_vat_wysylka " 
+                                 update="@form " 
                                  rendered="#{WpisView.podatnikObiekt.nip ne '5263158333' and vat7DKView.pokazpelna and vat7DKView.pozwolnazapis}" 
                                  style="width: 150px; margin-left: 10px;" title="Najpierw wciśnij 'oblicz'. Potem dopisz ewentualne kwoty z ręki."/>
                 <p:commandButton  value="zapisz"  actionListener="#{vat7DKView.zapiszdeklaracje}"
