zmiany ppk po nowemu

--- a/kadry/src/main/webapp/portalpracodawca/sub/pracownik_dane.xhtml
+++ b/kadry/src/main/webapp/portalpracodawca/sub/pracownik_dane.xhtml
@@ -114,7 +114,7 @@
                         <p:outputLabel value="zaliczki na podatek w innym kraju" for="innykraj" />
                         <p:selectBooleanCheckbox id="innykraj" value="#{pracownikDane2View.selected.zaliczkiwinnymkraju}" title="płaci zaliczki w innym kraju"/>
                     </p:panelGrid>
-                    <p:panel header="dane do urlopu na dzień wprowadzenia do programu"/>
+                    <p:panel header="dane do urlopu na rok i miesiąc angażu"/>
                     <p:panelGrid columns="8">
                         <p:outputLabel value="wymiar urlopu" for="urlop" />
                         <p:inputText id="urlop" value="#{pracownikDane2View.selected.wymiarurlopu}" title="wymiar urlopu" size="10"/>
