--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
@@ -69,7 +69,7 @@
                             <h:outputText value="razem społ. prac."/>
                         </p:column>
                         <p:column>
-                            <h:outputText value="brutto-zus"/>
+                            <h:outputText value="społ. Polska"/>
                         </p:column>
                         <p:column width="20" style="text-align: center;">
                             <h:outputText value="#{indexpasek+1}"/>
@@ -117,8 +117,8 @@
                         <p:column>
                             <bcf:outputpl value="#{itempasek.razemspolecznepracownik}"/>
                         </p:column>
-                        <p:column>
-                            <bcf:outputpl value="#{itempasek.bruttominusspoleczne}"/>
+                         <p:column>
+                            <bcf:outputpl value="#{itempasek.spoleczneudzialpolska}"/>
                         </p:column>
                         <p:column width="20" style="text-align: center;">
                             <p:commandButton icon="pi pi-print" actionListener="#{pasekwynagrodzenView.drukuj(itempasek)}" global="false"/>
@@ -145,7 +145,10 @@
                         </p:column>
 <!--                        <p:column>
                             <h:outputText value="ulga dla kl.sr"/>
-                        </p:column>-->
+                        </p:column>-->  
+                        <p:column>
+                            <h:outputText value="brutto-zus"/>
+                        </p:column>
                         <p:column>
                             <h:outputText value="koszty uzyskania"/>
                         </p:column>
@@ -198,7 +201,9 @@
                         
 <!--                        <p:column>
                             <bcf:outputpl value="#{itempasek.ulgadlaklasysredniejSuma}"/>
-                        </p:column>-->
+                        </p:column>-->              <p:column>
+                            <bcf:outputpl value="#{itempasek.bruttominusspoleczne}"/>
+                        </p:column>
                         <p:column>
                             <bcf:outputpl value="#{itempasek.kosztyuzyskania}"/>
                         </p:column>
