--- a/kadry/src/main/webapp/pracownikhistoria/sub/pracownik_staz.xhtml
+++ b/kadry/src/main/webapp/pracownikhistoria/sub/pracownik_staz.xhtml
@@ -8,7 +8,8 @@
     <p:panelGrid columns="2" columnClasses="thirty-percent, seventy-percent" style="width: 1500px;">
         <p:outputPanel style="height: 200px">
             <h:form id="AngazCreateForm">
-                <p:selectOneListbox id="pracownik" value="#{pracownikStazView.selectedangaz}" required="true" requiredMessage="pracownik"  converter="#{angazConverter}" style="width: 200px;height: 300px;" filter="true" filterMatchMode="contains" scrollHeight="300">
+                <p:selectOneListbox id="pracownik" value="#{pracownikStazView.selectedangaz}" required="true" requiredMessage="pracownik"  converter="#{angazConverter}" 
+                                    style="width: 200px;" filter="true" filterMatchMode="contains" scrollHeight="500">
                     <f:selectItems value="#{pracownikStazView.listapracownikow}"
                                    var="pracownikItem"
                                    itemValue="#{pracownikItem}" itemLabel="#{pracownikItem.pracownik.nazwiskoImie}"/>
