--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_podatek.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_podatek.xhtml
@@ -55,13 +55,13 @@
                  <bcf:outputpl value="#{itempasekpod.podstawaopodatkowaniazagranicawaluta}"/>
             </p:column>
             <p:column headerText="podatek zagr. wal" style="text-align: center;">
-                <p:inputNumber value="#{itempasekpod.podatekdochodowyzagranicawaluta}"  size="10"  maxlength="7" decimalPlaces="2" decimalSeparator="," inputStyle="text-align: right">
+                <p:inputNumber value="#{itempasekpod.podatekdochodowyzagranicawaluta}"  size="10"  maxlength="7" decimalPlaces="2" decimalSeparator="," inputStyle="text-align: right" styleClass="polepodatkuwpln">
                     <p:ajax event="change" partialSubmit="true" global="false" listener="#{pasekwynagrodzenView.editpasek(itempasekpod)}" update="@(.polepodatkuwpln)"/>
                 </p:inputNumber>
             </p:column>
-            <p:column headerText="podatek zagr. pln">
+            <p:column headerText="podatek zagr. pln" >
                 <p:outputPanel  styleClass="polepodatkuwpln">
-                <bcf:outputpl value="#{itempasekpod.podatekdochodowyzagranica}" />
+                    <bcf:outputpl value="#{itempasekpod.podatekdochodowyzagranica}" />
                 </p:outputPanel>
             </p:column>
 
